--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "bootstrap-icons": "^1.2.1",
         "bootstrap-icons-vue": "^0.3.0",
         "core-js": "^3.6.5",
+        "moment": "^2.29.1",
+        "moment-timezone": "^0.5.32",
         "vue": "^3.0.0",
         "vue-router": "^4.0.0-0",
         "vue-toastification": "^2.0.0-beta.9"
